@@ -2,26 +2,20 @@ package xyz.j8bit_forager.nillachoco.effect;
 
 import net.minecraft.core.BlockPos;
 import net.minecraft.network.chat.Component;
-import net.minecraft.util.Mth;
-import net.minecraft.world.damagesource.DamageSource;
-import net.minecraft.world.damagesource.DamageSources;
-import net.minecraft.world.damagesource.DamageTypes;
 import net.minecraft.world.effect.MobEffect;
 import net.minecraft.world.effect.MobEffectCategory;
 import net.minecraft.world.effect.MobEffectInstance;
+import net.minecraft.world.entity.EntityType;
 import net.minecraft.world.entity.LivingEntity;
+import net.minecraft.world.entity.monster.Zombie;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.Blocks;
-import net.minecraft.world.level.block.FrostedIceBlock;
-import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.level.entity.EntityTypeTest;
-import net.minecraft.world.phys.shapes.CollisionContext;
 import xyz.j8bit_forager.nillachoco.block.ModBlocks;
 import xyz.j8bit_forager.nillachoco.entity.ModEntityTypes;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class WarmthEffect extends MobEffect {
 
@@ -30,8 +24,11 @@ public class WarmthEffect extends MobEffect {
     }
 
     public void applyEffectTick(LivingEntity pLivingEntity, int pAmplifier) {
-
         Level world = pLivingEntity.level();
+
+        if (pLivingEntity.getEffect(this).endsWithin(1) && pLivingEntity instanceof Zombie zombie) {
+            zombie.convertTo(EntityType.HUSK, true);
+        }
 
         if (pLivingEntity.getActiveEffects().stream().anyMatch((mobEffectInstance -> mobEffectInstance.getEffect() == ModEffects.CHILLING_EFFECT.get()))){
             for (MobEffectInstance me : pLivingEntity.getActiveEffects().stream().toList()){
@@ -48,7 +45,7 @@ public class WarmthEffect extends MobEffect {
                             pLivingEntity.getBoundingBox().inflate(2.0 + pAmplifier))
                     .filter((bs) -> world.getBlockState(bs).getTags().toList().contains(ModBlocks.Tags.DESTROYED_BY_WARMTH))
                     .map(BlockPos::immutable)
-                    .collect(Collectors.toList());
+                    .toList();
             if (blocks.size() > 0) {
                 for (BlockPos bp : blocks) {
                     if (world.getBlockState(bp).is(Blocks.ICE)){
@@ -70,8 +67,7 @@ public class WarmthEffect extends MobEffect {
             }
 
             if (pLivingEntity instanceof Player p) {
-
-                String s = world.getBiome(p.blockPosition()).get().toString();
+                // String s = world.getBiome(p.blockPosition()).get().toString();
                 if (world.getBiome(pLivingEntity.blockPosition()).get().getBaseTemperature() >= 2) {
                     p.displayClientMessage(Component.translatable(this.getDescriptionId() + ".warning_text"), true);
                     if (!pLivingEntity.isInWaterRainOrBubble()) {
